# diospyros

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  cdios.py  dot-params  git push  mat-add.c  mat-sub.c  params.json  runt.toml  setup.py
src/dios-egraphs/: CMakeLists.txt  Cargo.toml  README.md  a.out  build.rs  common.py  mult.c  mult.ll  run.sh  vec-dsl-conversion.py  vec-dsl-merge.py  vec-dsl-split.py
src/dios-egraphs/Diospyros/: AddressRewriting.cpp  CMakeLists.txt  Cargo.toml  LoadStoreMovement.cpp  Makefile  NewLoadStoreMovement.cpp  OldLoadStoreMovement.cpp  README.md  VectorizationUtilities.cpp  a.c  aa.ll  aa.ll.orig  add_mult.ll  build.rs  clang.ll  dce.ll  diospyros.cpp  diospyros.hpp  diospyros.ll  documentation.md  err.txt  err2.txt  final.ll  finish.ll  mac.ll  makefile  notes.txt  opt.ll  reduce.sh  report.md  run.sh  run_all.sh  runt.py  runt.sh  runt.toml  runt_FAIL.py  runtime.py  set_up_mac.sh  stencil-2d-results.txt  test-runner.sh  (+1 more)
src/dios-egraphs/Diospyros/.cargo/: config
src/dios-egraphs/Diospyros/c-tests/: 2d-2d-conv.c  2d-conv.c  2d-matrix-multiply-new.c  2d-matrix-multiply.c  2d.c  4-by-4-matrix-multiply.c  5-by-5-matrix-multiply.c  README.md  add-mul-interleave.c  add.c  all-arith-ops.c  array-reversal.c  array-symmetric.c  branching-add.c  branching-mul.c  branching-sub.c  break-w.c  calloc.c  cols-greater-matrix-multiply.c  continue.c  div.c  dot-product.c  fft.c  identity_matrix.c  inline-float.c  local-array-2.c  local-array-3.c  local-array-4.c  local-var.c  mac.c  matrix-scalar-product.c  matrix-vector-product.c  multi-loops.c  multi-mat-mul.c  multiple_adds.c  nested-inline.c  nested-loops.c  overwrite.c  permuted.c  point-product.c  (+43 more)
src/dios-egraphs/Diospyros/fail-tests/: local-array-1.c  local-array-2.c  local-array-3.c  local-array-4.c  local-array.c  loop-inline.c  modified_qr_1_regress_PASS.c  point-product-random-FAIL.c  q-prod-random-FAIL.c  qr-decomp-FAIL.c  qr-decomp-fixed-size-debug-template.c  qr-decomp-local-arrays.c  simplified_qr_decomp.c  test1-local-array.c  test1.c  test2-local-array.c  test2.c  test3-local-array.c  test3.c  test4-1-linear.c  test4-1.c  test4-2-2.c  test4-2-linear.c  test4-2.c  test4-3-linear.c  test4-3.c  test4-4-linear.c  test4-5-linear.c
src/dios-egraphs/Diospyros/failed-test/: aa.ll  clang.ll  dce.ll  diospyros.ll  final  opt.ll
src/dios-egraphs/Diospyros/src/: lib.rs  (+2 more)
src/dios-egraphs/src/: alignconsecsearcher.rs  binopsearcher.rs  config.rs  cost.rs  lib.rs  macsearcher.rs  main.rs  permutestore.rs  rewriteconcats.rs  rules.rs  searchutils.rs  stringconversion.rs  veclang-original.rs  veclang.rs
(+497 files in other folders)
