[package]
name = "dios-egraphs"
version = "0.1.0"
authors = ["Alexa VanHattum <amv94@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { git = "https://github.com/mwillsey/egg", rev = "cfbd470efd37e7366f454e27b5ba5b367dc103ff" }
assert_approx_eq = "1.1.0"
itertools = "0.9.0"