[package]
name = "dios-egraphs"
version = "0.1.0"
authors = ["Alexa VanHattum <amv94@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "llvmlib"
crate-type = ["cdylib"]

[dependencies]
egg =  "0.6.0"
assert_approx_eq = "1.1.0"
itertools = "0.9.0"
clap = "2.33.2"
lexpr = "0.2.5"
llvm-sys = "120"
libc = "0.2.98"

[features]
# For setting the vector width, default is 4
vec_width_2 = []
vec_width_8 = []
