[package]
name = "dios-llvm"
version = "0.1.0"
authors = ["Jasper Liang <jxl8@cornell.edu>", "Jonathan Tran <jdt98@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dios-egraphs = { path = ".." }
egg =  "0.6.0"
assert_approx_eq = "1.1.0"
itertools = "0.9.0"
clap = "2.33.2"
lexpr = "0.2.5"
llvm-sys = { version = "110" }
libc = "0.2.98"

[build-dependencies]
cc = "1.0"

[lib]
name = "llvmlib"
crate-type = ["rlib", "cdylib"]
